# gatelessgate

./: .gitignore  Makefile  README.md  adl.c  algorithm.c  blake.c  blake.h  driver-opencl.c  gatelessgate-Ethereum-platform0.bat  gatelessgate-Ethereum-platform1.bat  gatelessgate-Monero-platform0.bat  gatelessgate-Monero-platform1.bat  gatelessgate-Zcash-platform1.bat  gatelessgate-dev1.bat  gatelessgate-dev2.bat  gatelessgate.bat  gatelessgate.py  gbt-util.c  input.cl  list.bat  main.c  ocl.c  ocl.h  param.h  sgminer.c  sha256.c
Core/: .gitignore  algorithm.c  api.c  configure.ac  driver-opencl.c  gatelessgate-Ethereum-platform0.bat  gatelessgate-Ethereum-platform0.sh  gatelessgate-Ethereum-platform1.bat  gatelessgate-Ethereum-platform1.sh  gatelessgate-Ethereum.conf  gatelessgate-Feathercoin-platform0.bat  gatelessgate-Feathercoin-platform0.sh  gatelessgate-Feathercoin-platform1.bat  gatelessgate-Feathercoin-platform1.sh  gatelessgate-Feathercoin.conf  gatelessgate-Monero-platform0.bat  gatelessgate-Monero-platform0.sh  gatelessgate-Monero-platform1.bat  gatelessgate-Monero-platform1.sh  gatelessgate-Monero.conf  gatelessgate-Pascal-platform0.bat  gatelessgate-Pascal-platform1.bat  gatelessgate-Zcash-platform0.bat  gatelessgate-Zcash-platform0.sh  gatelessgate-Zcash-platform1.bat  gatelessgate-Zcash-platform1.sh  gatelessgate-Zcash.conf  gatelessgate.c  help.bat  miner.h  ocl.c  ocl.h
Core/algorithm/: cryptonight.c  equihash.c  equihash.h  yescrypt_core.h
Core/binary-kernel/: BuildBinaryKernels.bat  equihash.cl  ethash-new-gcn3-amdcl2.asm  ethash-new-gcn3-ocl20.asm  ethash-new.cl  neoscrypt.cl
Core/kernel/: equihash-gcn1-ocl12-32bit.asm  equihash-param.h  equihash.cl  ethash-new.cl  neoscrypt.cl
Core/ocl/: binary_kernel.c  build_kernel.c
Core/winbuild/: gatelessgate.vcxproj  gatelessgate.vcxproj.filters
Core/winbuild/jansson/: jansson.vcxproj  jansson_config.h
Monitor/: GatelessGate.VC.db  GatelessGate.sln  MultiMiner.sln
Monitor/MultiMiner.CoinChoose/: GatelessGate.CoinChoose.csproj
Monitor/MultiMiner.CoinWarz/: GatelessGate.CoinWarz.csproj
Monitor/MultiMiner.Engine/: GatelessGate.Engine.csproj  MiningEngine.cs
Monitor/MultiMiner.Engine/Data/: MinerNames.cs
Monitor/MultiMiner.Engine/Installers/: AvailableMiners.cs  MultiMinerInstaller.cs
Monitor/MultiMiner.Example/: MultiMiner.Example.csproj  Program.cs
Monitor/MultiMiner.NiceHash/: MultiMiner.NiceHash.csproj
Monitor/MultiMiner.Remoting/: MultiMiner.Remoting.csproj  RemotingServer.cs
Monitor/MultiMiner.Services/: MultiMiner.Services.csproj
Monitor/MultiMiner.TUI/: MultiMiner.TUI.csproj
Monitor/MultiMiner.UX/: MultiMiner.UX.csproj
Monitor/MultiMiner.UX/ViewModels/: ApplicationViewModel.cs
Monitor/MultiMiner.WhatToMine/: MultiMiner.WhatToMine.csproj
Monitor/MultiMiner.Win/: MultiMiner.Win.csproj
Monitor/MultiMiner.Win/Controls/: ApiConsoleControl.cs
Monitor/MultiMiner.Win/Forms/: MinerForm.cs  WizardForm.cs
Monitor/MultiMiner.Win/Forms/Configuration/: AdvancedSettingsForm.cs  CoinChooseForm.cs  GPUMinerSettingsForm.cs  MinerSettingsForm.cs  MultiPoolChooseForm.cs  OnlineSettingsForm.cs  PerksForm.cs  PoolsForm.cs  ProxySettingsForm.cs  SettingsForm.cs  StrategiesForm.cs
Monitor/MultiMiner.Xgminer.Api/: GatelessGate.GatelessGate.Api.csproj
Monitor/MultiMiner.Xgminer.Api.Client/: GatelessGate.GatelessGate.Api.Client.csproj
Monitor/MultiMiner.Xgminer.Discovery/: MultiMiner.Xgminer.Discovery.csproj
algorithm/: equihash.c  ethash.c  ethgencache.c  yescryptcommon.c
kernel/: equihash-param.h  equihash.cl  ethash.cl  neoscrypt.cl  wolf-skein.cl
ocl/: binary_kernel.c  build_kernel.c
src/: Makefile.am  algorithm.c  algorithm.h  compat.h  configure.ac  driver-opencl.c  gatelessgate-Ethereum-platform0.sh  gatelessgate-Ethereum-platform1.sh  gatelessgate-Pascal-platform1.sh  gatelessgate-Zcash-platform0.bat  gatelessgate-Zcash-platform0.sh  gatelessgate.c  ocl.c  ocl.h  util.c
src/algorithm/: equihash.c
src/kernel/: cryptonight.cl  equihash-gcn1-ocl12.asm  equihash-param.h  equihash.cl  equihash.cl.working.cl  equihash.cl.working2.cl  ethash.cl  neoscrypt.cl
src/ocl/: binary_kernel.c
src/winbuild/: .gitignore  gatelessgate.vcxproj  gatelessgate.vcxproj.filters
winbuild/: README.txt  gatelessgate.sln  gatelessgate.vcxproj  gatelessgate.vcxproj.filters  sgminer.vcxproj
winbuild/jansson/: jansson_private_config.h
windows/: gatelessgate.sln  gettimeofday.h  silentarmy.vcxproj  silentarmy.vcxproj.filters
